# aimaker

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  package.json
api/src/: app.module.ts  main.ts
api/src/activity/: activity.controller.ts  activity.module.ts  activity.service.ts
api/src/agent-runs/: agent-runs.controller.ts  agent-runs.module.ts  agent-runs.service.ts
api/src/analytics/: analytics.controller.ts  analytics.module.ts  analytics.service.ts
api/src/config/: database.config.ts
api/src/integrations/: github.service.ts  integrations.module.ts
api/src/issues/: issues.controller.ts  issues.module.ts  issues.service.ts
api/src/milestones/: milestones.controller.ts  milestones.module.ts  milestones.service.ts
api/src/orchestrator/: orchestrator.controller.ts  orchestrator.module.ts  orchestrator.service.ts  redis-subscriber.service.ts
api/src/policies/: policies.controller.ts  policies.module.ts  policies.service.ts
api/src/projects/: projects.controller.ts  (+2 more)
dashboard/: Dockerfile  package.json
docs/: design-brief.md
engine/: Dockerfile  pyproject.toml
engine/aimaker/: __init__.py  activity.py  cli.py  config.py  events.py  scanner.py  server.py
engine/aimaker/agents/: backend.py  base.py  frontend.py  pm.py  qa.py
engine/aimaker/agents/prompts/: backend.md  frontend.md  pm.md  qa.md
engine/aimaker/graph/: graph.py  nodes.py  router.py  state.py
engine/aimaker/runner/: claude_runner.py
engine/aimaker/safety/: budget.py  checkpoint.py
engine/aimaker/strategy/: base.py  gsd.py  spec_kit.py
(+46 files in other folders)
