[project]
name = "aimaker-engine"
version = "0.1.0"
description = "AI-powered development orchestration engine"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
aimaker-engine = "aimaker.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
packages = ["aimaker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
